--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/rubik": "^5.0.23",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "d3-geo": "^3.1.1",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/d3-geo": "^3.1.0",
     "@types/leaflet": "^1.9.12",
+    "@types/node": "^22.5.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/topojson-client": "^3.1.4",
