--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "d3-geo": "^3.1.1",
+    "jotai": "^2.9.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-plock": "^3.2.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "topojson-client": "^3.1.0"
