--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "d3-geo": "^3.1.1",
+    "iso-3166-1": "^2.1.1",
     "jotai": "^2.9.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.436.0",
